alignment fixes

--- a/assets/styles/minimap-icons.css
+++ b/assets/styles/minimap-icons.css
@@ -15,9 +15,9 @@
 .bane                .herolist__hero__link:before { background-position: -212px -5px   }
 .batrider            .herolist__hero__link:before { background-position: -255px -5px   }
 .beastmaster         .herolist__hero__link:before { background-position: -297px -5px   }
-.bloodseeker         .herolist__hero__link:before { background-position: -339px -5px   }
-.bounty_hunter       .herolist__hero__link:before { background-position: -381px -5px   }
-.brewmaster          .herolist__hero__link:before { background-position: -4px -47px    }
+.bloodseeker         .herolist__hero__link:before { background-position: -338px -5px   }
+.bounty_hunter       .herolist__hero__link:before { background-position: -380px -5px   }
+.brewmaster          .herolist__hero__link:before { background-position: -5px -46px    }
 .bristleback         .herolist__hero__link:before { background-position: -47px -47px   }
 .broodmother         .herolist__hero__link:before { background-position: -86px -47px   }
 .centaur_warrunner   .herolist__hero__link:before { background-position: -125px -47px  }
@@ -41,18 +41,18 @@
 .enigma              .herolist__hero__link:before { background-position: -47px -131px  }
 .faceless_void       .herolist__hero__link:before { background-position: -89px -129px  }
 .gyrocopter          .herolist__hero__link:before { background-position: -131px -131px }
-.huskar              .herolist__hero__link:before { background-position: -173px -131px }
+.huskar              .herolist__hero__link:before { background-position: -172px -131px }
 .invoker             .herolist__hero__link:before { background-position: -215px -131px }
 .io                  .herolist__hero__link:before { background-position: -258px -131px }
 .jakiro              .herolist__hero__link:before { background-position: -299px -131px }
 .juggernaut          .herolist__hero__link:before { background-position: -341px -131px }
 .keeper_of_the_light .herolist__hero__link:before { background-position: -383px -131px }
-.kunkka              .herolist__hero__link:before { background-position: -5px -173px   }
+.kunkka              .herolist__hero__link:before { background-position: -6px -173px   }
 .legion_commander    .herolist__hero__link:before { background-position: -47px -173px  }
 .leshrac             .herolist__hero__link:before { background-position: -89px -173px  }
 .lich                .herolist__hero__link:before { background-position: -131px -173px }
 .lifestealer         .herolist__hero__link:before { background-position: -173px -173px }
-.lina                .herolist__hero__link:before { background-position: -215px -173px }
+.lina                .herolist__hero__link:before { background-position: -216px -173px }
 .lion                .herolist__hero__link:before { background-position: -256px -173px }
 .lone_druid          .herolist__hero__link:before { background-position: -299px -173px }
 .luna                .herolist__hero__link:before { background-position: -341px -173px }
@@ -64,7 +64,7 @@
 .morphling           .herolist__hero__link:before { background-position: -173px -215px }
 .naga_siren          .herolist__hero__link:before { background-position: -215px -215px }
 .natures_prophet     .herolist__hero__link:before { background-position: -257px -215px }
-.necrophos           .herolist__hero__link:before { background-position: -299px -215px }
+.necrophos           .herolist__hero__link:before { background-position: -298px -215px }
 .night_stalker       .herolist__hero__link:before { background-position: -341px -215px }
 .nyx_assassin        .herolist__hero__link:before { background-position: -383px -215px }
 .ogre_magi           .herolist__hero__link:before { background-position: -5px -257px   }
@@ -73,20 +73,20 @@
 .outworld_devourer   .herolist__hero__link:before { background-position: -131px -257px }
 .phantom_assassin    .herolist__hero__link:before { background-position: -173px -257px }
 .phantom_lancer      .herolist__hero__link:before { background-position: -215px -257px }
-.phoenix             .herolist__hero__link:before { background-position: -257px -257px }
+.phoenix             .herolist__hero__link:before { background-position: -258px -257px }
 .puck                .herolist__hero__link:before { background-position: -299px -256px }
-.pudge               .herolist__hero__link:before { background-position: -341px -257px }
+.pudge               .herolist__hero__link:before { background-position: -340px -257px }
 .pugna               .herolist__hero__link:before { background-position: -383px -257px }
 .queen_of_pain       .herolist__hero__link:before { background-position: -6px -299px   }
 .razor               .herolist__hero__link:before { background-position: -47px -299px  }
 .riki                .herolist__hero__link:before { background-position: -89px -299px  }
 .rubick              .herolist__hero__link:before { background-position: -131px -299px }
 .sand_king           .herolist__hero__link:before { background-position: -173px -299px }
-.shadow_demon        .herolist__hero__link:before { background-position: -215px -299px }
+.shadow_demon        .herolist__hero__link:before { background-position: -216px -299px }
 .shadow_fiend        .herolist__hero__link:before { background-position: -258px -299px }
 .shadow_shaman       .herolist__hero__link:before { background-position: -299px -299px }
 .silencer            .herolist__hero__link:before { background-position: -342px -299px }
-.skywrath_mage       .herolist__hero__link:before { background-position: -383px -299px }
+.skywrath_mage       .herolist__hero__link:before { background-position: -384px -299px }
 .slardar             .herolist__hero__link:before { background-position: -5px -341px   }
 .slark               .herolist__hero__link:before { background-position: -47px -341px  }
 .sniper              .herolist__hero__link:before { background-position: -89px -341px  }
@@ -99,8 +99,8 @@
 .terrorblade         .herolist__hero__link:before { background-position: -381px -341px }
 .tidehunter          .herolist__hero__link:before { background-position: -5px -383px   }
 .timbersaw           .herolist__hero__link:before { background-position: -47px -383px  }
-.tinker              .herolist__hero__link:before { background-position: -89px -383px  }
-.tiny                .herolist__hero__link:before { background-position: -131px -383px }
+.tinker              .herolist__hero__link:before { background-position: -90px -383px  }
+.tiny                .herolist__hero__link:before { background-position: -132px -383px }
 .treant_protector    .herolist__hero__link:before { background-position: -173px -383px }
 .troll_warlord       .herolist__hero__link:before { background-position: -215px -383px }
 .tusk                .herolist__hero__link:before { background-position: -257px -383px }
@@ -108,8 +108,8 @@
 .ursa                .herolist__hero__link:before { background-position: -341px -383px }
 .vengeful_spirit     .herolist__hero__link:before { background-position: -383px -383px }
 .venomancer          .herolist__hero__link:before { background-position: -422px -5px   }
-.viper               .herolist__hero__link:before { background-position: -420px -47px  }
-.visage              .herolist__hero__link:before { background-position: -423px -89px  }
+.viper               .herolist__hero__link:before { background-position: -421px -47px  }
+.visage              .herolist__hero__link:before { background-position: -424px -89px  }
 .warlock             .herolist__hero__link:before { background-position: -425px -131px }
 .weaver              .herolist__hero__link:before { background-position: -425px -173px }
 .windranger          .herolist__hero__link:before { background-position: -426px -215px }
